--- a/Makefile.in
+++ b/Makefile.in
@@ -15,24 +15,24 @@ FAST_Q=/var/spool/simta/fast
 DEAD_Q=/var/spool/simta/dead
 
 SRC=    @SRC@  daemon.c receive.c argcargv.c envelope.c base64.c \
-	simsend.c rcptlist.c tz.c tlsconnect.c address.c \
+	simsend.c rcptlist.c tlsconnect.c address.c \
 	createdb.c bounce.c
 SIMTAOBJ=	@SIMTA_OBJ@ daemon.o receive.o argcargv.o envelope.o base64.o \
-		tz.o address.o line_file.o ll.o bdb.o header.o simta.o \
+		address.o line_file.o ll.o bdb.o header.o simta.o \
 		queue.c ml.o smtp.o expand.o mx.o bounce.o nlist.o \
 		q_cleanup.o
 TLSCONOBJ=	tlsconnect.o
-SIMSENDOBJ=	@SIMSEND_OBJ@ simsend.o line_file.o envelope.o tz.o header.o \
+SIMSENDOBJ=	@SIMSEND_OBJ@ simsend.o line_file.o envelope.o header.o \
 		simta.o ll.o nlist.o address.o bdb.o bounce.o queue.o expand.o \
 		smtp.c ml.o mx.o
 SIMLOGOBJ=	simlog.o
 EXPANDEROBJ=	@EXPANDER_OBJ@ expander.o queue.o ll.o line_file.o \
-		envelope.o tz.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o nlist.o q_cleanup.o mx.o
 QRUNNEROBJ=	@Q_RUNNER_OBJ@ q_runner.c queue.o ll.o line_file.o \
-		envelope.o tz.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
 		header.o bounce.o nlist.o q_cleanup.o mx.o
-QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
+QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o ml.o \
 		smtp.o simta.o mx.o
 CREATEDBOBJ=	createdb.o argcargv.o bdb.o
 
@@ -103,6 +103,10 @@ daemon.o : daemon.c
 	    -DSIMTA_MAXCONNECTIONS=${SIMTA_MAXCONNECTIONS} \
 	    -c daemon.c -o daemon.o
 
+header.o : header.c
+	${CC} ${SIMTACFLAGS} @HAVE_TM_GMTOFF@ \
+		-c header.c -o header.o
+
 receive.o : receive.c
 	${CC} ${SIMTACFLAGS} \
 		-DVERSION=\"`cat VERSION`\" \
@@ -123,9 +127,6 @@ address.o : address.c
 	${CC} ${SIMTACFLAGS} \
 		-DSIMTA_ALIAS_DB=\"${SIMTA_ALIAS_DB}\" \
 		-c address.c -o address.o
-
-tz.o : tz.c
-	${CC} ${CFLAGS} @HAVE_TM_GMTOFF@ -c tz.c -o tz.o
 
 tlsconnect : libsnet/libsnet.a denser/denser.o ${TLSCONOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o tlsconnect ${TLSCONOBJ} ${LIBPATH} ${LIBS}
