--- a/Makefile.in
+++ b/Makefile.in
@@ -19,19 +19,19 @@ SRC=    @SRC@  daemon.c receive.c argcargv.c envelope.c base64.c \
 	createdb.c bounce.c
 SIMTAOBJ=	@SIMTA_OBJ@ daemon.o receive.o argcargv.o envelope.o base64.o \
 		address.o line_file.o ll.o bdb.o header.o simta.o \
-		queue.c ml.o smtp.o expand.o mx.o bounce.o nlist.o \
+		queue.c ml.o smtp.o expand.o mx.o bounce.o \
 		q_cleanup.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	@SIMSEND_OBJ@ simsend.o line_file.o envelope.o header.o \
-		simta.o ll.o nlist.o address.o bdb.o bounce.o queue.o expand.o \
+		simta.o ll.o address.o bdb.o bounce.o queue.o expand.o \
 		smtp.c ml.o mx.o
 SIMLOGOBJ=	simlog.o
 EXPANDEROBJ=	@EXPANDER_OBJ@ expander.o queue.o ll.o line_file.o \
 		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
-		header.o bounce.o nlist.o q_cleanup.o mx.o
+		header.o bounce.o q_cleanup.o mx.o
 QRUNNEROBJ=	@Q_RUNNER_OBJ@ q_runner.c queue.o ll.o line_file.o \
 		envelope.o ml.o simta.o smtp.o expand.o address.o bdb.o \
-		header.o bounce.o nlist.o q_cleanup.o mx.o
+		header.o bounce.o q_cleanup.o mx.o
 QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o ml.o \
 		smtp.o simta.o mx.o
 CREATEDBOBJ=	createdb.o argcargv.o bdb.o
