--- a/simta_ldap.conf
+++ b/simta_ldap.conf
@@ -46,7 +46,7 @@ uri  ldap:///ou=user%20Groups,ou=Groups,dc=umich,dc=edu?*?sub?(&(cn=%25s)(associ
 #            If no attributes are configured,  then all attributes are 
 #            requested from the ldap server.
 
-attributes  objectClass title postaladdress mailForwardingAddress rfc822Mail telephoneNumber description owner errorsTo rfc822ErrorsTo requestsTo rfc822RequestsTo cn member moderator onVacation uid suppressNoEmailError associateddomain membersonly permittedgroup 
+attributes  objectClass title postaladdress mailForwardingAddress rfc822Mail telephoneNumber description owner errorsTo rfc822ErrorsTo requestsTo rfc822RequestsTo cn member moderator onVacation uid suppressNoEmailError associateddomain membersonly permittedgroup realtimeblocklist
 
 # vacationhost is the domain name of the vacation server.
 # vacationattr is the name of a boolean attribute that when TRUE
