--- a/simta_ldap.conf
+++ b/simta_ldap.conf
@@ -8,7 +8,13 @@ objectclass		group		rfc822mailgroup
 # starttls == 0 => Do Not start -- Default
 # starttls == 1 => start tls layer but if not successful -- then OK
 # starttls == 2 => start tls layer and fail if not successful
-# starttls	2
+starttls	2
+tls_cacert /etc/openldap/certificates/instantsslCA.pem
+
+# tls_cert and tls_key enable SASL EXTERNAL binding w/ a cert.
+tls_cert   /home/pturgyan/simta/simta.crt
+tls_key    /home/pturgyan/simta/simta.key
+
 #
 # ldapdebug -- enable ldap/lber debugging output to stdout.
 #ldapdebug	65535
@@ -21,6 +27,7 @@ objectclass		group		rfc822mailgroup
 
 # host -- the ldap server
 host ldap-dev.itd.umich.edu
+#host ldap.itd.umich.edu
 
 # port -- the ldap server port -- defaults to 389
 port 4343
@@ -46,7 +53,7 @@ uri  ldap:///ou=user%20Groups,ou=Groups,dc=umich,dc=edu?*?sub?(&(cn=%25s)(associ
 #            If no attributes are configured,  then all attributes are 
 #            requested from the ldap server.
 
-attributes  objectClass title postaladdress mailForwardingAddress rfc822Mail telephoneNumber description owner errorsTo rfc822ErrorsTo requestsTo rfc822RequestsTo cn member moderator onVacation uid suppressNoEmailError associateddomain membersonly permittedgroup realtimeblocklist
+attributes  objectClass title postaladdress mailForwardingAddress rfc822Mail telephoneNumber description owner errorsTo rfc822ErrorsTo requestsTo rfc822RequestsTo cn member moderator onVacation uid suppressNoEmailError associateddomain membersonly permittedgroup realtimeblocklist rfc822private
 
 # vacationhost is the domain name of the vacation server.
 # vacationattr is the name of a boolean attribute that when TRUE
