MIN_WORK_TIME patch

--- a/simta.conf
+++ b/simta.conf
@@ -3,22 +3,31 @@
 #
 
 #
-# q runner local max
+# The maximum number of local queue runners the master queue scheduler is
+# allowed to have at any given time.
+#
 #MAX_Q_RUNNERS_LOCAL	25
-#
 
 #
-# q runner slow max
+# The maximum number of slow queue runners the master queue scheduler is
+# allowed to have at any given time.
+#
 #MAX_Q_RUNNERS_SLOW	250
-#
 
 #
-# simta process launch limit
+# The maximum number of slow queue runners the master queue scheduler is
+# allowed to fork in one instant before triggering an anti-throttling
+# mechanism that sleeps the scheduler for one second.  0 means no limit.
+#
 #MAX_Q_RUNNERS_LAUNCH	10
-#
-#
 
 #
-# how often we will try to read the disk
-#DISK_READ_PERIOD	300
+# How often the mster queue scheduler tries to read the disk, in seconds.
 #
+#DISK_READ_PERIOD	300
+
+#
+# The minimum ammount of time the master queue runner will work between disk
+# reads, in seconds.
+#
+#MIN_WORK_TIME		60
