--- a/simta.conf
+++ b/simta.conf
@@ -2,32 +2,133 @@
 # simta.conf template
 #
 
+# Domain used as the mail suffix for locally generated mail.
 #
+#MASQUERADE		domain
+
+# Designate a host to punt undeliverable mail to.
+#
+#PUNT			hostname
+
+# Designate a directory for simta's mail queues.
+#
+#BASE_DIR		/var/spool/simta
+
+# The ammount of time the SMTP server waits for client command.
+#
+#RECEIVE_WAIT		600
+
+# Number of lines of the original message that gets sent back in the event of
+# a bounce.  0 means unlimited.
+#
+#BOUNCE_LINES		100
+
+# How many seconds we try to deliver a message before we bounce it.  Default
+# is a standard three days.
+#
+#BOUNCE_SECONDS		259200
+
+# The maximum number of headers allowed on any incoming SMTP message.
+#
+#MAX_RECEIVED_HEADERS	100
+
 # The maximum number of local queue runners the master queue scheduler is
 # allowed to have at any given time.
 #
 #MAX_Q_RUNNERS_LOCAL	25
 
-#
 # The maximum number of slow queue runners the master queue scheduler is
 # allowed to have at any given time.
 #
 #MAX_Q_RUNNERS_SLOW	250
 
-#
 # The maximum number of slow queue runners the master queue scheduler is
 # allowed to fork in one instant before triggering an anti-throttling
 # mechanism that sleeps the scheduler for one second.  0 means no limit.
 #
 #MAX_Q_RUNNERS_LAUNCH	10
 
-#
 # How often the mster queue scheduler tries to read the disk, in seconds.
 #
 #DISK_READ_PERIOD	300
 
-#
 # The minimum ammount of time the master queue runner will work between disk
 # reads, in seconds.
 #
 #MIN_WORK_TIME		60
+
+# The minimum ammount of time the master queue runner will work between disk
+# reads, in seconds.
+#
+#CONTENT_FILTER		path
+
+# If this flag is set, simta will allow connections with invalid reverse DNS.
+#
+#IGNORE_REVERSE
+
+# An optional URL to give an incoming connection that fails it's DNS reverse
+# lookup.
+#
+#REVERSE_URL		URL
+
+# If this flag is set, allow incoming connections despite DNS errors during
+# reverse lookup.
+#
+#IGNORE_CONNECT_IN_DNS_ERRORS
+
+# Enable RBL.  Domain is the RBL server, URL is a URL to give as a SMTP
+# error message.
+#
+#RBL_DOMAIN		DOMAIN			URL
+
+# Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
+# error message.
+#
+#USER_RBL_DOMAIN	DOMAIN			URL
+
+# Allow -f option with simsendmail.
+#
+#SIMSEND_STRICT_FROM_OFF
+
+# Enable submission service on the given port
+#
+#SUBMISSION_PORT	PORT
+
+# Enable TLS
+#
+#TLS_ON
+
+# Don't check to see if hostnames are MXed to us.
+#
+#DNS_CONFIG_OFF
+
+#Don't check to see if hostnames are MXed to us.
+#
+#DNS_CONFIG_OFF
+
+# Give a "554 No SMTP service here" message to all inbound SMTP clients.
+#
+#SERVICE_SMTP_REFUSE
+
+# Set maximum message size.  Default is 0, or unlimited.
+#
+#MAX_MESSAGE_SIZE	0
+
+# Set maximum number of failed Rcpt to's for an inbound SMTP client.
+# Default is 0, or unlimited.
+#
+#MAX_FAILED_RCPTS	0
+
+# Enable low-pref MX message acceptance for the designated domain.
+#
+#LOW_PREF_MX		DOMAIN
+
+# Accept all mail regardless of security concerns.  Don't enable this unless
+# you know what you're doing, because you become an open relay.
+#
+#GLOBAL_RELAY
+
+# Enable SASL
+#
+#SASL_ON
+
