sync simta.conf with the command line args

--- a/simta.conf
+++ b/simta.conf
@@ -4,63 +4,81 @@
 
 # Domain used as the mail suffix for locally generated mail.
 #
-#MASQUERADE		domain
+#MASQUERADE			domain
 
 # Designate a host to punt undeliverable mail to.
 #
-#PUNT			hostname
+#PUNT				hostname
 
 # Designate a directory for simta's mail queues.
 #
-#BASE_DIR		/var/spool/simta
+#BASE_DIR			/var/spool/simta
 
 # The ammount of time the SMTP server waits for client command.
 #
-#RECEIVE_WAIT		600
+#RECEIVE_WAIT			600
 
 # Number of lines of the original message that gets sent back in the event of
 # a bounce.  0 means unlimited.
 #
-#BOUNCE_LINES		100
+#BOUNCE_LINES			100
 
 # How many seconds we try to deliver a message before we bounce it.  Default
 # is a standard three days.
 #
-#BOUNCE_SECONDS		259200
+#BOUNCE_SECONDS			259200
+
+# The maximum number of incoming SMTP connections allowed.
+#
+#MAX_RECEIVE_CONNECTIONS	100
 
 # The maximum number of headers allowed on any incoming SMTP message.
 #
-#MAX_RECEIVED_HEADERS	100
+#MAX_RECEIVED_HEADERS		100
 
 # The maximum number of local queue runners the master queue scheduler is
 # allowed to have at any given time.
 #
-#MAX_Q_RUNNERS_LOCAL	25
+#MAX_Q_RUNNERS_LOCAL		25
 
 # The maximum number of slow queue runners the master queue scheduler is
 # allowed to have at any given time.
 #
-#MAX_Q_RUNNERS_SLOW	250
+#MAX_Q_RUNNERS_SLOW		250
 
 # The maximum number of slow queue runners the master queue scheduler is
 # allowed to fork in one instant before triggering an anti-throttling
 # mechanism that sleeps the scheduler for one second.  0 means no limit.
 #
-#MAX_Q_RUNNERS_LAUNCH	10
+#MAX_Q_RUNNERS_LAUNCH		10
 
 # How often the mster queue scheduler tries to read the disk, in seconds.
 #
-#DISK_READ_PERIOD	300
+#DISK_READ_PERIOD		300
 
 # The minimum ammount of time the master queue runner will work between disk
 # reads, in seconds.
 #
-#MIN_WORK_TIME		60
+#MIN_WORK_TIME			60
 
-# The minimum ammount of time the master queue runner will work between disk
-# reads, in seconds.
+# Call a content filter to examine the DATA portion of an incoming SMTP
+# message.  The content of the message is given on stdin, and the following
+# environment variables are defined:
+# SIMTA_DFILE - path to message's Dfile
+# SIMTA_TFILE - path to message's tfile
+# SIMTA_REMOTE_IP - IP address of remote host
+# SIMTA_REMOTE_HOSTNAME - given hostname of remote host
+# SIMTA_REVERSE_LOOKUP - DNS reverse lookup of remote host
+# SIMTA_SMTP_MAIL_FROM - Message's From
+# SIMTA_SMTP_HELO - Helo hostname from remote host
 #
-#CONTENT_FILTER		path
+# The content filter can return one of four integer values:
+# 0 - MESSAGE_ACCEPT
+# 1 - MESSAGE_ACCEPT_AND_DELETE
+# 2 - MESSAGE_REJECT
+# 3 - MESSAGE_TEMPFAIL
+#
+#CONTENT_FILTER			path
 
 # If this flag is set, simta will allow connections with invalid reverse DNS.
 #
@@ -69,7 +87,7 @@
 # An optional URL to give an incoming connection that fails it's DNS reverse
 # lookup.
 #
-#REVERSE_URL		URL
+#REVERSE_URL			URL
 
 # If this flag is set, allow incoming connections despite DNS errors during
 # reverse lookup.
@@ -79,49 +97,77 @@
 # Enable RBL.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message.
 #
-#RBL_DOMAIN		DOMAIN			URL
+#RBL_DOMAIN			DOMAIN			URL
 
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message.
 #
-#USER_RBL_DOMAIN	DOMAIN			URL
+#USER_RBL_DOMAIN		DOMAIN			URL
+
+# File for ca.
+#
+#CA_FILE			cert/ca.pem
+
+# File for cert.
+#
+#CERT_FILE			cert/cert.pem
+
+# File for private key.
+#
+#PRIVATE_KEY_FILE		cert/cert.pem
 
 # Allow -f option with simsendmail.
 #
 #SIMSEND_STRICT_FROM_OFF
 
-# Enable submission service on the given port
+# Enable submission service defaults to port 587 if not in /etc/services
 #
-#SUBMISSION_PORT	PORT
+#SUBMISSION_PORT
 
 # Enable TLS
 #
 #TLS_ON
 
-# Don't check to see if hostnames are MXed to us.
+# Enable TLS
 #
-#DNS_CONFIG_OFF
+#TLS_ON
+
+# Use the randfile with TLS
+#
+#USE_RANDFILE
 
 #Don't check to see if hostnames are MXed to us.
 #
 #DNS_CONFIG_OFF
 
+# Start SMTP service on a given port
+#
+#SMTP_PORT			25
+
+# Size of backlog for incoming smtp connections.
+#
+#SMTP_LISTEN_BACKLOG		5
+
 # Give a "554 No SMTP service here" message to all inbound SMTP clients.
 #
 #SERVICE_SMTP_REFUSE
 
+# Disable incoming SMTP service.
+#
+#SERVICE_SMTP_OFF
+
 # Set maximum message size.  Default is 0, or unlimited.
 #
-#MAX_MESSAGE_SIZE	0
+#MAX_MESSAGE_SIZE		0
 
 # Set maximum number of failed Rcpt to's for an inbound SMTP client.
 # Default is 0, or unlimited.
 #
-#MAX_FAILED_RCPTS	0
+#MAX_FAILED_RCPTS		0
 
 # Enable low-pref MX message acceptance for the designated domain.
 #
-#LOW_PREF_MX		DOMAIN
+#LOW_PREF_MX			DOMAIN
 
 # Accept all mail regardless of security concerns.  Don't enable this unless
 # you know what you're doing, because you become an open relay.
@@ -131,4 +177,3 @@
 # Enable SASL
 #
 #SASL_ON
-
