--- a/simta.conf
+++ b/simta.conf
@@ -4,21 +4,21 @@
 
 # Domain used as the mail suffix for locally generated mail.
 #
-#MASQUERADE			domain
+#MASQUERADE			DOMAIN
 
 # Designate a host to punt undeliverable mail to.
 #
-#PUNT				hostname
+#PUNT				HOSTNAME
 
 # Designate a directory for simta's mail queues.
 #
 #BASE_DIR			/var/spool/simta
 
-# The ammount of time the SMTP server waits for client command.
+# The amount of time the SMTP server waits for client command.
 #
 #RECEIVE_WAIT			600
 
-# Number of lines of the original message that gets sent back in the event of
+# Number of lines of the original message that get sent back in the event of
 # a bounce.  0 means unlimited.
 #
 #BOUNCE_LINES			100
@@ -52,11 +52,11 @@
 #
 #MAX_Q_RUNNERS_LAUNCH		10
 
-# How often the mster queue scheduler tries to read the disk, in seconds.
+# How often the master queue scheduler tries to read the disk, in seconds.
 #
 #DISK_READ_PERIOD		300
 
-# The minimum ammount of time the master queue runner will work between disk
+# The minimum amount of time the master queue runner will work between disk
 # reads, in seconds.
 #
 #MIN_WORK_TIME			60
@@ -69,8 +69,8 @@
 # SIMTA_REMOTE_IP - IP address of remote host
 # SIMTA_REMOTE_HOSTNAME - given hostname of remote host
 # SIMTA_REVERSE_LOOKUP - DNS reverse lookup of remote host
-# SIMTA_SMTP_MAIL_FROM - Message's From
-# SIMTA_SMTP_HELO - Helo hostname from remote host
+# SIMTA_SMTP_MAIL_FROM - message's From
+# SIMTA_SMTP_HELO - helo hostname from remote host
 #
 # The content filter can return one of four integer values:
 # 0 - MESSAGE_ACCEPT
@@ -78,14 +78,13 @@
 # 2 - MESSAGE_REJECT
 # 3 - MESSAGE_TEMPFAIL
 #
-#CONTENT_FILTER			path
+#CONTENT_FILTER			PATH
 
 # If this flag is set, simta will allow connections with invalid reverse DNS.
 #
 #IGNORE_REVERSE
 
-# An optional URL to give an incoming connection that fails it's DNS reverse
-# lookup.
+# An optional URL to give incoming connections that fails DNS reverse lookup.
 #
 #REVERSE_URL			URL
 
@@ -95,14 +94,22 @@
 #IGNORE_CONNECT_IN_DNS_ERRORS
 
 # Enable RBL.  Domain is the RBL server, URL is a URL to give as a SMTP
-# error message.
+# error message to blocked connections.
 #
 #RBL_DOMAIN			DOMAIN			URL
 
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
-# error message.
+# error message to blocked connections.
 #
 #USER_RBL_DOMAIN		DOMAIN			URL
+
+# Allow -f option with simsendmail.
+#
+#SIMSEND_STRICT_FROM_OFF
+
+# Enable TLS
+#
+#TLS_ON
 
 # File for ca.
 #
@@ -116,23 +123,11 @@
 #
 #PRIVATE_KEY_FILE		cert/cert.pem
 
-# Allow -f option with simsendmail.
-#
-#SIMSEND_STRICT_FROM_OFF
-
-# Enable submission service defaults to port 587 if not in /etc/services
+# Enable submission service defaults to port 587 if not in /etc/services.
 #
 #SUBMISSION_PORT
 
-# Enable TLS
-#
-#TLS_ON
-
-# Enable TLS
-#
-#TLS_ON
-
-# Use the randfile with TLS
+# Use the randfile with TLS.
 #
 #USE_RANDFILE
 
@@ -140,7 +135,7 @@
 #
 #DNS_CONFIG_OFF
 
-# Start SMTP service on a given port
+# Start SMTP service on a given port.
 #
 #SMTP_PORT			25
 
@@ -174,6 +169,6 @@
 #
 #GLOBAL_RELAY
 
-# Enable SASL
+# Enable SASL.
 #
 #SASL_ON
