D Rules and modifications

--- a/configure.ac
+++ b/configure.ac
@@ -31,7 +31,7 @@ AC_STRUCT_TIMEZONE
 SET_LOCALDELIVERY
 PROG_MAIL_LOCAL
 PROG_PROCMAIL
-CHECK_LOCALDELIVERY
+WARN_LOCALDELIVERY
 
 if test x_$GCC = x_yes; then
     OPTOPTS=${OPTOPTS:-"-Wall -Wmissing-prototypes -Wconversion"}
