--- a/simta.conf
+++ b/simta.conf
@@ -18,6 +18,16 @@
 #
 #RECEIVE_WAIT			600
 
+# Path to the default local mailer, and arguments.  This overrides configure.
+#
+# Variable replacement in the arguments is as follows:
+#
+# $S sender
+# $R recipient
+# $D recipient's domain
+#
+#RECEIVE_WAIT			600
+
 # Number of lines of the original message that get sent back in the event of
 # a bounce.  0 means unlimited.
 #
