add checksums to incoming SMTP messages for the content filter

--- a/simta.conf
+++ b/simta.conf
@@ -81,6 +81,7 @@
 # SIMTA_REVERSE_LOOKUP - DNS reverse lookup of remote host
 # SIMTA_SMTP_MAIL_FROM - message's From
 # SIMTA_SMTP_HELO - helo hostname from remote host
+# SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
 #
 # The content filter can return one of four integer values:
 # 0 - MESSAGE_ACCEPT
@@ -89,6 +90,10 @@
 # 3 - MESSAGE_TEMPFAIL
 #
 #CONTENT_FILTER			PATH
+
+# Define a checksum algorithm for the content filter.
+# 
+#CHECKSUM_ALGORITHM		ALGORITHM
 
 # If this flag is set, simta will allow connections with invalid reverse DNS.
 #
