--- a/simta.conf
+++ b/simta.conf
@@ -191,3 +191,9 @@
 # Enable SASL.
 #
 #SASL_ON
+
+# Call a defined binary for delivery of a domain's mail.
+# Special args: $S Sender, $R recipient, $D domain
+# Data of message will be on standard input.
+#
+#@hostname			D	/path/to/binary [ args ]
