--- a/simta.conf
+++ b/simta.conf
@@ -219,8 +219,8 @@
 #
 # Rule precedence occurs in the same order given in the config file.
 #
-# Defaults for the local host.  If any for the local domain are defined, the
-# defaults are not implicitly added.
+# Defaults for the local host.  If any for a local domain are defined, the
+# defaults for that type are not implicitly added.
 #
 # @localhost RE ALIAS
 # @localhost RE PASSWORD
@@ -229,4 +229,5 @@
 # Special args: $S Sender, $R recipient, $D domain
 # Data of message will be on standard input.
 #
-# @hostname			D	/path/to/binary [ args ]
+# @hostname	D	/path/to/binary [ args ]
+# @hostname	D	/usr/bin/procmail -f $S -d $R
