LOCALHOST defined in RED rules

--- a/simta.conf
+++ b/simta.conf
@@ -210,6 +210,9 @@
 #
 # @domain TYPE EXPANSION_TYPE [ FILENAME ]
 #
+# if domain is the string-insensitive token "LOCALHOST", the directive applies
+# to the machine named by the gethostname() system call.
+#
 # TYPE can be either 'r' or 'R', and E.  The 'R' is for a Sufficient action.
 # If a Recipient is found in a Sufficient EXPANSION_TYPE, no further
 # actions are tried and the user is accepted.  The 'r' is for a Required
