bugfix for default RED rules, better logging

--- a/simta.conf
+++ b/simta.conf
@@ -11,6 +11,9 @@
 #PUNT				HOSTNAME
 
 # Do not attempt an initial deliver of incoming SMTP mail, just queue it.
+# This option might be used on a punt host, to allow better throughput to
+# the punt queue when it can be assumed that the mail has recently failed
+# a deliver attempt.
 #
 #QUEUE_INCOMING_SMTP_MAIL
 
