better RBL syntax

--- a/simta.conf
+++ b/simta.conf
@@ -122,7 +122,7 @@
 # precedence to the lookups.
 #
 #RBL_BLOCK			DOMAIN			URL
-#RBL_ACCEPT			DOMAIN			URL
+#RBL_ACCEPT			DOMAIN
 
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message to blocked connections.  If an address is found in a BLOCK
@@ -131,7 +131,7 @@
 # precedence to the lookups.
 #
 #USER_RBL_BLOCK			DOMAIN			URL
-#USER_RBL_ACCEPT		DOMAIN			URL
+#USER_RBL_ACCEPT		DOMAIN
 
 # Allow -f option with simsendmail.
 #
