--- a/simta.conf
+++ b/simta.conf
@@ -124,6 +124,10 @@
 #RBL_BLOCK			DOMAIN			URL
 #RBL_ACCEPT			DOMAIN
 
+# Enable verbose RBL logging.
+#
+#RBL_VERBOSE_LOGGING
+
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message to blocked connections.  If an address is found in a BLOCK
 # list, it is blocked, if it is found in an ACCEPT list, it will be accepted
