--- a/simta.conf
+++ b/simta.conf
@@ -132,7 +132,8 @@
 # error message to blocked connections.  If an address is found in a BLOCK
 # list, it is blocked, if it is found in an ACCEPT list, it will be accepted
 # and no further lookups will take place.  Order in the config file gives
-# precedence to the lookups.
+# precedence to the lookups.  Non-USER RBL actions take precedence over
+# USER lists.
 #
 #USER_RBL_BLOCK			DOMAIN			URL
 #USER_RBL_ACCEPT		DOMAIN
