--- a/simta.conf
+++ b/simta.conf
@@ -33,7 +33,7 @@
 # $R recipient
 # $D recipient's domain
 #
-#RECEIVE_WAIT			600
+#DEFAULT_LOCAL_MAILER [ ARGS ]
 
 # Number of lines of the original message that get sent back in the event of
 # a bounce.  0 means unlimited.
