SMTP DATA timing patch

--- a/simta.conf
+++ b/simta.conf
@@ -25,6 +25,14 @@
 #
 #RECEIVE_WAIT			600
 
+# The amount of time the SMTP server waits for a SMTP DATA line
+#
+#DATA_LINE_WAIT			300
+
+# The amount of time the SMTP server waits for the entire data transaction.
+#
+#DATA_SESSION_WAIT		3600
+
 # Path to the default local mailer, and arguments.  This overrides configure.
 #
 # Variable replacement in the arguments is as follows:
