content filter can trigger tarpitting

--- a/simta.conf
+++ b/simta.conf
@@ -101,6 +101,7 @@
 # 1 - MESSAGE_ACCEPT_AND_DELETE
 # 2 - MESSAGE_REJECT
 # 3 - MESSAGE_TEMPFAIL
+# 4 - MESSAGE_TEMPFAIL_TARPIT
 #
 #CONTENT_FILTER			PATH
 
