WRITE_BEFORE_BANNER refinements

--- a/simta.conf
+++ b/simta.conf
@@ -93,6 +93,8 @@
 # SIMTA_SMTP_MAIL_FROM - message's From
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
+# SIMTA_WRITE_BEFORE_BANNER - The SMTP client wrote before the SMTP banner
+#    if this isnot set to 0
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
 # SIMTA_CHECKSUM_SIZE - number of bytes of data read for a message's checksum
 #
@@ -210,11 +212,11 @@
 #
 #MAX_FAILED_RCPTS		0
 
-# Wait a number of seconds before sending the SMTP banner.  If the client
-# attempts to write before the banner, invoke SMTP client punishment.  0
-# turns this option off.
+# If WAIT_SECONDS is non-zero, pause before the SMTP banner.  If the client
+# attempts to write before reading the banner, it is punished with the banner
+# being delayed by DELAY_SECONDS.
 #
-#READ_BEFORE_BANNER		0
+#WRITE_BEFORE_BANNER		WAIT_SECONDS		DELAY_SECONDS
 
 # Enable low-pref MX message acceptance for the designated domain.
 #
