TARPIT individual stage timeouts, SMTP_MODE config file directives

--- a/simta.conf
+++ b/simta.conf
@@ -2,6 +2,36 @@
 # simta.conf template
 #
 
+# Set the default SMTP_MODE.
+#
+# NORMAL	Treat all incoming connections normally.
+# OFF		Disable all SMTP service, including SMTPS and AUTH.
+# REFUSE	Give a "554 No SMTP service here" message to SMTP clients.
+# GLOBAL_RELAY	Accept all mail regardless of security concerns.
+#		Don't enable this unless you know what you're doing,
+#		because you become an open relay.
+# TEMPFAIL	Set the SMTP default mode to TEMPFAIL.
+# TARPIT	Set the SMTP default mode to TARPIT.
+#
+#SMTP_MODE			NORMAL
+
+# TARPIT stage wait times.  The default time is waited before ecah banner
+# message while simta is in TARPIT mode.  If a stage wait
+#
+#SMTP_TARPIT_DEFAULT		120
+#SMTP_TARPIT_CONNECT		0
+#SMTP_TARPIT_MAIL		0
+#SMTP_TARPIT_RCPT		0
+#SMTP_TARPIT_DATA		0
+#SMTP_TARPIT_DATA_EOF		0
+
+# Enable SMTPS service on port 465 if it is not defined in /etc/services.
+# 0 - None, do not enable service
+# 1 - Server
+# 2 - Client & Server
+#
+# AUTHLEVEL			0
+
 # Domain used as the mail suffix for locally generated mail.
 #
 #MASQUERADE			DOMAIN
@@ -178,7 +208,7 @@
 #
 #PRIVATE_KEY_FILE		cert/cert.pem
 
-# Enable submission service defaults to port 587 if not in /etc/services.
+# Enable submission service on port 587 if not defined in /etc/services.
 #
 #SUBMISSION_PORT
 
@@ -190,7 +220,8 @@
 #
 #DNS_CONFIG_OFF
 
-# Start SMTP service on a given port.
+# Start SMTP service on a given port.  If this is set to 0, normal SMTP
+# service will not be enabled, tho SMTPS and SMTP AUTH may still be active.
 #
 #SMTP_PORT			25
 
@@ -217,8 +248,14 @@
 
 # Set the type of punishment for exceeding MAX_FAILED_RCPTS.
 #
+# TEMPFAIL	This is the default mode.  All "mail from", "rcpt to", and
+#		"data" requests will be tempfailed.
+#
+# TARPIT	All "mail from" and "rcpt to" requests will succeed, all
+#		"data eof" requests will be tempfailed.  SMTP banners will
+#		be delayed as per the TARPIT timing variables.
+#
 #FAILED_RCPT_PUNISHMENT		[ TEMPFAIL | TARPIT ]
-#FAILED_RCPT_PUNISHMENT		TEMPFAIL
 
 # If WAIT_SECONDS is non-zero, pause before the SMTP banner.  If the client
 # attempts to write before reading the banner, it is punished with the banner
@@ -229,16 +266,6 @@
 # Enable low-pref MX message acceptance for the designated domain.
 #
 #LOW_PREF_MX			DOMAIN
-
-# Accept all mail regardless of security concerns.  Don't enable this unless
-# you know what you're doing, because you become an open relay.
-#
-#GLOBAL_RELAY
-
-# Tempfail all mail.  Wait SECONDS between SMTP banner messages.  This also
-# enables GLOBAL_RELAY, tho no mail is ever accepted.
-#
-#SMTP_TARPIT			SECONDS
 
 # Enable SASL.
 #
