content filter upgrade RBL disconnect bugfix

--- a/simta.conf
+++ b/simta.conf
@@ -49,6 +49,10 @@
 #
 #PUNT				HOSTNAME
 
+# Designate a host as a "mail jail" for the content filter.
+#
+#JAIL				HOSTNAME
+
 # Do not attempt an initial deliver of incoming SMTP mail, just queue it.
 # This option might be used on a punt host, to allow better throughput to
 # the punt queue when it can be assumed that the mail has recently failed
@@ -127,8 +131,8 @@
 #AGGRESSIVE_DELIVERY		[ ON | OFF ]
 
 # Call a content filter to examine the DATA portion of an incoming SMTP
-# message.  The content of the message is given on stdin, and the following
-# environment variables are defined:
+# message.  
+#
 # SIMTA_DFILE - path to message's Dfile
 # SIMTA_TFILE - path to message's tfile
 # SIMTA_REMOTE_IP - IP address of remote host
@@ -142,12 +146,20 @@
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
 # SIMTA_CHECKSUM_SIZE - number of bytes of data read for a message's checksum
 #
-# The content filter can return one of the following integer values:
-# 0 - MESSAGE_ACCEPT
-# 1 - MESSAGE_ACCEPT_AND_DELETE
-# 2 - MESSAGE_REJECT
-# 3 - MESSAGE_TEMPFAIL
-# 4 - MESSAGE_TEMPFAIL_TARPIT
+# The content filter return code is a bitfield.  The first line of text
+# returned from the content filter will be logged and displayed to the
+# SMTP client.
+#
+# Results:
+# 0x0000 0000	MESSAGE_ACCEPT
+# 0x0000 0001	MESSAGE_TEMPFAIL
+# 0x0000 0010	MESSAGE_REJECT
+#
+# Options:
+# 0x0000 0100	MESSAGE_DELETE
+# 0x0000 1000	MESSAGE_DISCONNECT
+# 0x0001 0000	MESSAGE_TARPIT
+# 0x0010 0000	MESSAGE_JAIL
 #
 # Note that if the content filter suffers an internal system error, it will
 # return MESSAGE_TEMPFAIL.
@@ -158,9 +170,6 @@
 #
 #SMTP_DATA_URL			URL
 
-# Define a checksum algorithm for the content filter.
-# 
-#CHECKSUM_ALGORITHM		ALGORITHM
 
 # If this flag is set, simta will allow connections with invalid reverse DNS.
 #
