content filter tells who AUTHed

--- a/simta.conf
+++ b/simta.conf
@@ -142,7 +142,7 @@
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
 # SIMTA_WRITE_BEFORE_BANNER - The SMTP client wrote before the SMTP banner
-#    if this is not set to 0
+# SIMTA_AUTH_ID - who was authenticated, if anyone
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
 # SIMTA_CHECKSUM_SIZE - number of bytes of data read for a message's checksum
 #
