SIMTA_UID available in content filter

--- a/simta.conf
+++ b/simta.conf
@@ -150,6 +150,7 @@
 # SIMTA_SMTP_MAIL_FROM - message's From
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
+# SIMTA_MID - The Message's UID as defined by simta
 # SIMTA_WRITE_BEFORE_BANNER - The SMTP client wrote before the SMTP banner
 # SIMTA_AUTH_ID - who was authenticated, if anyone
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
